<resources>
    <string name="app_name">VIETNAMESE DICTIONARY</string>
    <string name="dict_chi_vie">Việt - Trung</string>
    <string name="dict_chinese">Hán Tự</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Go back</string>
    <string name="han_viet">Hán việt:</string>
    <string name="common_source">Từ điển trích dẫn:</string>
    <string name="phonetics">Phiên âm:</string>
    <string name="vietnamese_word">Tiếng Việt:</string>
    <string name="chinese_word">Tiếng Trung:</string>
</resources>